# ai-developer-course

./: README.md
lesson1-tricky_questions/: README.md  assignment.md  result.md
lesson2-customize_model/0_test-questions-and-fixes/3_skills/: README.md  skills-rest.txt
lesson2-customize_model/0_test-questions-and-fixes/3_skills/scripts/src/: petstoreapi.py
lesson2-customize_model/0_test-questions-and-fixes/3_skills/snake/: pyproject.toml
lesson2-customize_model/0_test-questions-and-fixes/3_skills/snake/src/snake/: __init__.py
lesson2-customize_model/1_prompt-engineering/0_zero_shot/: prompts.txt
lesson2-customize_model/1_prompt-engineering/1_few_shot/: prompts.txt
lesson2-customize_model/1_prompt-engineering/2_role/: prompts.txt
lesson2-customize_model/1_prompt-engineering/3_context/: data.txt  prompts.txt
lesson2-customize_model/1_prompt-engineering/4_output/: prompts.txt
lesson2-customize_model/1_prompt-engineering/5_CoT-chain-of-thoughts/: prompts.txt
lesson2-customize_model/1_prompt-engineering/OLD/4_reasoning/: 2_CoT.txt
lesson2-customize_model/assignment/: README.md
lesson2-customize_model/assignment/1_general/: README.md
lesson2-customize_model/assignment/2_ai-persona/: README.md
lesson2-customize_model/assignment/3_skills/: skills-coding.txt  skills-tool-usage.txt
lesson2-customize_model/assignment/3_skills/scripts/: pyproject.toml
lesson2-customize_model/assignment/3_skills/scripts/src/: snake.py
lesson2-customize_model/assignment/4_domain-knowledge/: README.md
