[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []
[project]
name = "project1"
version = "0.1.0"
description = ""
authors = [
    {name = "filippofilip", email = "fpapranecx@gmail.com"},
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "pygame>=2.5.2",
]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "MIT"}

